完成系统初始化接口
