# server/gen/proto/system_http.pb.go
@@ -1,0 +1,78 @@
+// Code generated by protoc-gen-go-http. DO NOT EDIT.
+// versions:
+// - protoc-gen-go-http v2.7.3
+// - protoc             v5.27.1
+// source: system.proto
+
+package api
+
+import (
+	context "context"
+	http "github.com/go-kratos/kratos/v2/transport/http"
+	binding "github.com/go-kratos/kratos/v2/transport/http/binding"
+)
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the kratos package it is being compiled against.
+var _ = new(context.Context)
+var _ = binding.EncodeURL
+
+const _ = http.SupportPackageIsVersion1
+
+const OperationSystemHandlerInitialize = "/server.api.SystemHandler/Initialize"
+
+type SystemHandlerHTTPServer interface {
+	Initialize(context.Context, *InitializeRequest) (*InitializeResponse, error)
+}
+
+func RegisterSystemHandlerHTTPServer(s *http.Server, srv SystemHandlerHTTPServer) {
+	r := s.Route("/")
+	r.POST("/system/initialize", _SystemHandler_Initialize0_HTTP_Handler(srv))
+}
+
+func _SystemHandler_Initialize0_HTTP_Handler(srv SystemHandlerHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in InitializeRequest
+		if err := ctx.Bind(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationSystemHandlerInitialize)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.Initialize(ctx, req.(*InitializeRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*InitializeResponse)
+		return ctx.Result(200, reply)
+	}
+}
+
+type SystemHandlerHTTPClient interface {
+	Initialize(ctx context.Context, req *InitializeRequest, opts ...http.CallOption) (rsp *InitializeResponse, err error)
+}
+
+type SystemHandlerHTTPClientImpl struct {
+	cc *http.Client
+}
+
+func NewSystemHandlerHTTPClient(client *http.Client) SystemHandlerHTTPClient {
+	return &SystemHandlerHTTPClientImpl{client}
+}
+
+func (c *SystemHandlerHTTPClientImpl) Initialize(ctx context.Context, in *InitializeRequest, opts ...http.CallOption) (*InitializeResponse, error) {
+	var out InitializeResponse
+	pattern := "/system/initialize"
+	path := binding.EncodeURL(pattern, in, false)
+	opts = append(opts, http.Operation(OperationSystemHandlerInitialize))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "POST", path, in, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
